// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render in disabled state 1`] = `
<label
  class="multiAutoComplete disabled"
>
  <div
    class="icon"
  >
    <span
      aria-label="su-search"
      class="su-search"
    />
  </div>
  <div
    class="items"
  >
    <span
      class="chip"
    >
      <button
        class="chip secondary small disabled"
      >
        James Bond
      </button>
    </span>
    <span
      class="chip"
    >
      <button
        class="chip secondary small disabled"
      >
        John Doe
      </button>
    </span>
    <input
      class="input mousetrap"
      disabled=""
      value=""
    />
  </div>
</label>
`;

exports[`Render in loading state 1`] = `
<label
  class="multiAutoComplete"
>
  <div
    class="icon"
  >
    <div
      class="spinner"
      style="width:20px;height:20px"
    >
      <div
        class="doubleBounce1"
      />
      <div
        class="doubleBounce2"
      />
    </div>
  </div>
  <div
    class="items"
  >
    <input
      class="input mousetrap"
      value=""
    />
  </div>
</label>
`;

exports[`Render with given value 1`] = `
<label
  class="multiAutoComplete"
>
  <div
    class="icon"
  >
    <span
      aria-label="su-search"
      class="su-search"
    />
  </div>
  <div
    class="items"
  >
    <span
      class="chip"
    >
      <button
        class="chip secondary small"
      >
        James Bond
        <span
          aria-label="su-times"
          class="su-times clickable icon"
          role="button"
          tabindex="0"
        />
      </button>
    </span>
    <span
      class="chip"
    >
      <button
        class="chip secondary small"
      >
        John Doe
        <span
          aria-label="su-times"
          class="su-times clickable icon"
          role="button"
          tabindex="0"
        />
      </button>
    </span>
    <input
      class="input mousetrap"
      value=""
    />
  </div>
</label>
`;
